<resources>
    <string name="app_name">Life and Limb</string>
    <string name="sample_button_text">Button Testing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">New here? Click to sign up</string>
    <string name="login">Login</string>
    <string name="password">Enter password</string>
    <string name="e_mail">Enter your email</string>
    <string name="tag">Welcome to Life and Limb</string>
    <string name="todo_contentdescription">TODO</string>
    <string name="logout_btn">Log Out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="swipe_right_for_login">Already a user? Click here to Log in</string>
    <string name="register">Sign up</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="dashboard_title">Welcome User</string>
    <string name="your_name">Enter your name</string>
    <string name="todo">TODO</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="confirm">Confirm</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">Enter new password</string>
    <string name="re_type_new_password">Confirm new password</string>
    <string name="reset_password_email">Let us know your email</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="enter_verification_code">Enter verification code</string>
</resources>